syntax = "proto3";
option java_multiple_files = true;
option go_package = "github.com/somnath67643/aurora-sizing/clientgo/baseproto";
package org.anonymous.grpc;

import "cmd_header.proto";
import "cmd_trans_type.proto";
import "cmd_insert.proto";
import "cmd_update.proto";
import "cmd_delete.proto";
import "cmd_rename.proto";
import "cmd_trailer.proto";

message CmdTransactionRequest {
	TransType trans_seq = 1;
	oneof MessageRequest{
		CmdTransHeader header= 2;
		CmdInsert insert = 3;
		CmdUpdate update = 4;
		CmdDeleteData delete = 5;
		CmdRenameData rename = 6;
		CmdTrailer trailer = 7;
	}
}

