syntax = "proto3";
option java_multiple_files = true;
option go_package = "github.com/somnath67643/aurora-sizing/clientgo/baseproto";
package org.anonymous.grpc;

import "cmd_type.proto";
import "metadata.proto";


message CmdUpdate {
  int32 msg_size = 1;
  CmdType msg_type = 2;
  Metadata old_metadata = 3;
  Metadata new_metadata = 4;
  int32 mem_size = 5;
  bytes mem = 6;
}


